--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">LottoScanner</string>
+    <string name="app_name">ShiChiFu</string>
     <string name="title_activity_test_web_info_viewer">TestWebInfoViewer</string>
 </resources>
